--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@ section {
     color: #fff;
     font-size: 18px;
     font-weight: 700;
-    /* letter-spacing: 1px; */
     margin-top: 10px;
     margin-bottom: 30px;
 }
@@ -128,6 +127,7 @@ section {
     border-radius: 15px;
     margin-bottom: 40px;
     transition: 0.7s ease;
+    text-align: center;
 }
 .main-btn:hover {
     background-color: var(--greyColor);
@@ -146,7 +146,6 @@ section {
 /* products */
 .all-products {
     background-color: var(--secondaryColor);
-    padding: 20px 0px;
 }
 .products {
     width: 100%;
@@ -282,7 +281,6 @@ p.body {
     background-size: cover;
     width: 100%;
     height: 100%;
-    transform: rotate(0deg);
     transition: 1s;
     filter: brightness(60%);
 }
@@ -292,7 +290,7 @@ p.body {
 
 /* contact */
 .contact .icon{
-    font-size: 4.5em;
+    font-size: 4.0em;
 }
 .contact .info h3 {
     color: #000;
@@ -317,11 +315,11 @@ p.body {
 }
 .card {
     background-color: #fff;
-    width: 21.25em;
+    width: 19.25em;
     box-shadow: 0 5px 25px rgba(1 1 1 / 15%);
     border-radius: 10px;
-    padding: 25px;
-    margin: 15px;
+    padding: 20px;
+    margin: 15px 0px;
     transition: 0.7s ease;
 }
 .card:hover {
@@ -339,6 +337,7 @@ p.body {
     padding: 2em;
     display: flex;
     justify-content: space-between;
+    width: 100%;
 }
 .footer-title {
     font-size: 1.2em;
@@ -427,6 +426,14 @@ font-size: 40px;
         font-size: 12px;
     }
 
+    header {
+        font-size: 14px;
+    }
+
+    .card {
+        font-size: 12px;
+    }
+
     .main-content h2{
         font-size: 0.8em;
     }
@@ -436,8 +443,16 @@ font-size: 40px;
     }
 }
 
-@media (max-width:300px){
-    body{
+@media (max-width:380px){
+    footer{
+        font-size: 8px;
+    }
+
+    header {
+        font-size: 10px;
+    }
+
+    .card {
         font-size: 10px;
     }
 }
